--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,19 +18,19 @@
             android:id="@+id/pick_up"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:autofillHints=""
             android:hint="@string/pick_up"
-            android:textSize="15sp"
             android:inputType=""
-            android:autofillHints="" />
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/type"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:autofillHints=""
             android:hint="Type"
-            android:textSize="15sp"
             android:inputType=""
-            android:autofillHints="" />
+            android:textSize="15sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
