--- a/app/src/main/res/layout/car_layout.xml
+++ b/app/src/main/res/layout/car_layout.xml
@@ -12,85 +12,96 @@
         android:elevation="8dp"
         app:cardCornerRadius="2dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-            >
-
-            <ImageView
-                android:id="@+id/thumbnail"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginRight="16dp" />
-
-            <TextView
-                android:id="@+id/id_car"
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/thumbnail"
-                android:text="id_car" />
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/type"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/thumbnail"
-                android:layout_below="@+id/id_car"
-                android:text="type" />
+                <ImageView
+                    android:id="@+id/thumbnail"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginRight="16dp" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/brand"
-                android:layout_below="@+id/type"
-                android:layout_toRightOf="@+id/thumbnail"
-                android:text="brand"
-                />
+                <Button
+                    android:id="@+id/see_car_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@android:color/darker_gray"
+                    android:text="See car"
+                    android:textColor="#ffffff" />
+            </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/model"
-                android:layout_below="@+id/brand"
-                android:layout_toRightOf="@+id/thumbnail"
-                android:text="model"
-                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/price"
-                android:layout_below="@+id/model"
-                android:layout_toRightOf="@+id/thumbnail"
-                android:text="price"
-                />
+                <TextView
+                    android:id="@+id/id_car"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/thumbnail"
+                    android:text="id_car" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/rental_id"
-                android:layout_below="@+id/price"
-                android:layout_toRightOf="@+id/thumbnail"
-                android:text="rental_id"
-                />
+                <TextView
+                    android:id="@+id/type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/id_car"
+                    android:layout_toRightOf="@+id/thumbnail"
+                    android:text="type" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/rental_name"
-                android:layout_below="@+id/rental_id"
-                android:layout_toRightOf="@+id/thumbnail"
-                android:text="rental_name"
-                />
+                <TextView
+                    android:id="@+id/brand"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/type"
+                    android:layout_toRightOf="@+id/thumbnail"
+                    android:text="brand" />
 
+                <TextView
+                    android:id="@+id/model"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/brand"
+                    android:layout_toRightOf="@+id/thumbnail"
+                    android:text="model" />
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/model"
+                    android:layout_toRightOf="@+id/thumbnail"
+                    android:text="price" />
 
+                <TextView
+                    android:id="@+id/rental_id"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/price"
+                    android:layout_toRightOf="@+id/thumbnail"
+                    android:text="rental_id" />
 
+                <TextView
+                    android:id="@+id/rental_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/rental_id"
+                    android:layout_toRightOf="@+id/thumbnail"
+                    android:text="rental_name" />
+            </LinearLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
