--- a/app/src/main/res/layout/car_layout.xml
+++ b/app/src/main/res/layout/car_layout.xml
@@ -31,7 +31,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:gravity="center"
                         android:orientation="vertical">
 
@@ -39,7 +39,7 @@
                             android:id="@+id/thumbnail"
                             android:layout_width="150dp"
                             android:layout_height="150dp"
-                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
                             android:layout_alignParentTop="true"
                             android:layout_marginRight="16dp" />
 
@@ -47,7 +47,7 @@
 
                     <LinearLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:gravity="top"
                         android:orientation="vertical"
                         android:paddingLeft="15dp"
