--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -39,7 +39,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:padding="10dp">
 
                             <ImageView
                                 android:id="@+id/thumbnail"
