--- a/app/src/main/res/layout/activity_oauth.xml
+++ b/app/src/main/res/layout/activity_oauth.xml
@@ -19,9 +19,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintVertical_bias="0.796" />
 
-    <com.facebook.login.widget.LoginButton
+ <!--   <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
         android:layout_width="338dp"
         android:layout_height="10dp"
@@ -37,5 +37,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
         app:layout_constraintVertical_bias="0.281" />
-
+-->
 </android.support.constraint.ConstraintLayout>
