--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -16,7 +16,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
@@ -33,52 +33,37 @@
 
 
                     <LinearLayout
+                        android:id="@+id/CardLayout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_width="180dp"
+                            android:layout_height="150dp"
                             android:gravity="center"
-                            android:orientation="vertical"
+                            android:orientation="horizontal"
                             android:padding="10dp">
 
                             <ImageView
                                 android:id="@+id/thumbnail"
-                                android:layout_width="150dp"
-                                android:layout_height="150dp"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
                                 android:layout_alignParentLeft="true"
                                 android:layout_alignParentTop="true"
-                                android:layout_marginRight="16dp" />
+                                android:layout_marginRight="16dp"
+                                android:adjustViewBounds="false"
+                                android:cropToPadding="false" />
 
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_width="186dp"
+                            android:layout_height="wrap_content"
                             android:gravity="top"
                             android:orientation="vertical"
                             android:paddingLeft="15dp"
                             android:paddingRight="15dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentTop="true"
-                                android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Id Car:"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/id_car"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentTop="true"
-                                android:layout_toRightOf="@+id/thumbnail"
-                                android:text="id_car" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -134,16 +119,23 @@
                                 android:layout_toRightOf="@+id/thumbnail"
                                 android:text="model" />
 
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentTop="true"
+                                android:layout_toRightOf="@+id/thumbnail"
+                                android:text="Rental Name"
+                                android:textColor="@color/colorPrimary"
+                                android:textSize="16sp"
+                                android:textStyle="bold" />
 
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:gravity="top"
-                            android:orientation="vertical"
-                            android:paddingLeft="15dp"
-                            android:paddingRight="15dp">
+                            <TextView
+                                android:id="@+id/rental_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_below="@+id/color"
+                                android:layout_toRightOf="@+id/thumbnail"
+                                android:text="rental_name" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -157,49 +149,12 @@
 
                             <TextView
                                 android:id="@+id/price"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="86dp"
+                                android:layout_height="match_parent"
                                 android:layout_below="@+id/transmission"
                                 android:layout_toRightOf="@+id/thumbnail"
                                 android:text="price" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentTop="true"
-                                android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Rental Id:"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/rental_id"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/doors"
-                                android:layout_toRightOf="@+id/thumbnail"
-                                android:text="rental_id" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentTop="true"
-                                android:layout_toRightOf="@+id/thumbnail"
-                                android:text="Rental Name"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="16sp"
-                                android:textStyle="bold" />
-
-                            <TextView
-                                android:id="@+id/rental_name"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_below="@+id/color"
-                                android:layout_toRightOf="@+id/thumbnail"
-                                android:text="rental_name" />
                         </LinearLayout>
-
                     </LinearLayout>
 
                 </LinearLayout>
@@ -310,7 +265,7 @@
                         </LinearLayout>
 
                         <LinearLayout
-                            android:layout_width="wrap_content"
+                            android:layout_width="104dp"
                             android:layout_height="match_parent"
                             android:gravity="top"
                             android:orientation="vertical"
